--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,12 @@
             <artifactId>spring-security-crypto</artifactId>
             <version>5.7.9</version>
         </dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.6.15.Final</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
