--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-#server.host=192.168.43.181
+#server.host=192.168.1.147
 server.port=8080
 spring.datasource.url=jdbc:postgresql://localhost:5432/lcv
 spring.datasource.username=postgres
-spring.datasource.password=nirmalmeenu
+spring.datasource.password=algoriant
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
